--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,12 @@
 @import url('./reset.css');
+@import url('./main.css');
+@import url('./footer.css');
 
 :root {
     --primary-color: hsl(223, 87%, 63%);
     --secundary-blue: hsl(223, 100%, 88%);
     --secundary-red: hsl(354, 100%, 66%);
-    --bg-body: hsl(0, 0%, 59%);
+    --bg-body: hsl(0, 0%, 89%);
+    --bg-container: #fff;
     --dark-blue: hsl(209, 33%, 12%);
 }
