--- a/styles/style.css
+++ b/styles/style.css
@@ -9,4 +9,5 @@
     --bg-body: hsl(0, 0%, 89%);
     --bg-container: #fff;
     --dark-blue: hsl(209, 33%, 12%);
+    --gray-color: hsl(0, 0%, 59%);
 }
