--- a/styles/main.css
+++ b/styles/main.css
@@ -4,7 +4,7 @@
 
 .container {
     width: 100vw;
-    height: 100vh;
+    height: 90vh;
     margin: auto;
     display: flex;
     flex-direction: column;
@@ -58,7 +58,8 @@ input {
 }
 
 .email__error {
-    font-weight: 550;
+    font-family: none, sans-serif;
+    font-weight: 500;
     font-size: 12px;
     color: var(--secundary-red);
 }
@@ -73,8 +74,60 @@ input {
     padding: 12px;
     border-radius: 20px;
     align-self: center;
+    cursor: pointer;
 }
 
 .image img {
     max-width: 100%;
+}
+
+
+@media screen and (min-width: 1024px) {
+    .container {
+        height: 90vh;
+        max-width: 768px;
+    }
+    .email__titulo {
+        color: hsl(0, 0%, 59%);
+        font-size: 3em;
+        font-weight: 500;
+    }
+
+    .email__titulo b {
+        color: black;
+    }
+
+    .email__texto {
+        font-size: 1.2em;
+        font-weight: 500;
+    }
+
+    .email__input {
+        display: flex;
+        flex-direction: row;
+    }
+
+    input {
+        width: 300px;
+        padding: 12px;
+        border: 1px solid var(--secundary-blue);
+        border-radius: 20px;
+    }
+
+    .email__form button {
+        width: 150px;
+        transition: .2s;
+    }
+
+    .email__form button:hover {
+        opacity: .8;
+    }
+
+    .email__error {  
+        display: flex;      
+        font-size: .7em;
+        max-width: 480px;
+        justify-content: center;
+    }
+    
 }
